--- a/package.json
+++ b/package.json
@@ -22,6 +22,20 @@
     "eslint-plugin-react": "^5.0.1",
     "express": "^4.13.4",
     "react-hot-loader": "^1.3.0",
+    "autoprefixer": "^6.3.3",
+    "css-loader": "^0.23.1",
+    "normalize": "^0.3.1",
+    "normalize.css": "^3.0.3",
+    "postcss-assets": "^4.0.1",
+    "postcss-clearfix": "^0.2.0",
+    "postcss-color-function": "^2.0.0",
+    "postcss-import": "^7.1.3",
+    "postcss-loader": "^0.8.0",
+    "postcss-mixins": "^3.0.2",
+    "postcss-nested": "^1.0.0",
+    "postcss-simple-vars": "^1.2.0",
+    "precss": "^1.4.0",
+    "style-loader": "^0.13.0",
     "webpack": "^1.13.0",
     "webpack-dev-middleware": "^1.6.1",
     "webpack-hot-middleware": "^2.10.0"
@@ -30,6 +44,8 @@
     "babel-polyfill": "^6.7.4",
     "babel-runtime": "^6.6.1",
     "react": "^15.0.1",
-    "react-dom": "^15.0.1"
+    "react-dom": "^15.0.1",
+    "react-redux": "^4.4.5",
+    "redux": "^3.5.0"
   }
 }
